--- a/test.html
+++ b/test.html
@@ -1,1 +1,21 @@
-this is html file,,,,,,,,,,,,
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>The HTML5 Sample</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+
+ 
+
+</head>
+
+<body>
+  
+</body>
+</html>
+With that basic template in place, let’s now examine some of the significant parts of the markup and how these might differ from how HTML was written prior to HTML5.
+
+
